--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -29,6 +29,9 @@
             <block class="Buckaroo\Magento2\Block\Catalog\Product\View\Idin" name="buckaroo_magento2.product.info.idin"
                    before="product.info.extrahint" template="Buckaroo_Magento2::catalog/product/view/idin.phtml">
             </block>
+            <block class="Buckaroo\Magento2\Block\Catalog\Product\View\IdealFastCheckout" name="buckaroo_magento2.product.info.ideal.fast.checkout"
+                   before="buckaroo_magento2.product.info.paypal.express" template="Buckaroo_Magento2::catalog/product/view/ideal.phtml">
+            </block>
         </referenceContainer>
     </body>
 </page>
