--- a/view/frontend/templates/checkout/payconiq/pay.phtml
+++ b/view/frontend/templates/checkout/payconiq/pay.phtml
@@ -5,21 +5,27 @@
         <div id="buckaroo_magento2_payconiq_qr"></div>
 
         <button id="buckaroo_magento2_payconiq_cancel" type="button" title="Cancel" data-bind="click: cancelPayment">
-            <span><?= /* @noEscape */ __('Cancel')?></span>
+            <span><?= /* @noEscape */
+                    __('Cancel') ?></span>
         </button>
     </div>
 </div>
 
-<script>
-    require(['buckaroo/payconiq/pay'], function (payconiqPay) {
-        var transactionKey = "<?= /* @noEscape */ $block->getTransactionKey(); ?>";
-
-        payconiqPay.setTransactionKey(transactionKey);
-        payconiqPay.showQrCode();
-    });
-    cancelPayment = function() {
-        require(['buckaroo/payconiq/pay'], function (payconiqPay) {
-            payconiqPay.cancelPayment();
-        });
+<?php
+    $transactionKey = $block->getTransactionKey();
+?>
+<script type="text/x-magento-init">
+    {
+        "*": {
+            "Magento_Ui/js/core/app": {
+                "components": {
+                    "buckaroo_payconiq": {
+                        "component": "Buckaroo_Magento2/js/view/payment/method-renderer/payconiq",
+                        "transactionKey": "<?= /* @noEscape */
+        $transactionKey; ?>"
+                    }
+                }
+            }
+        }
     }
 </script>
