--- a/view/frontend/templates/checkout/payconiq/pay.phtml
+++ b/view/frontend/templates/checkout/payconiq/pay.phtml
@@ -5,8 +5,7 @@
         <div id="buckaroo_magento2_payconiq_qr"></div>
 
         <button id="buckaroo_magento2_payconiq_cancel" type="button" title="Cancel" data-bind="click: cancelPayment">
-            <span><?= /* @noEscape */
-                    __('Cancel') ?></span>
+            <span><?= /* @noEscape */ __('Cancel') ?></span>
         </button>
     </div>
 </div>
@@ -21,11 +20,10 @@
                 "components": {
                     "buckaroo_payconiq": {
                         "component": "Buckaroo_Magento2/js/view/payment/method-renderer/payconiq",
-                        "transactionKey": "<?= /* @noEscape */
-        $transactionKey; ?>"
-                    }
+                        "transactionKey": "<?= /* @noEscape */ $transactionKey; ?>"
                 }
             }
         }
     }
+}
 </script>
