--- a/view/frontend/templates/checkout/payconiq/pay.phtml
+++ b/view/frontend/templates/checkout/payconiq/pay.phtml
@@ -1,29 +1,29 @@
 <div id="buckaroo_magento2_payconiq_loader" class="loading-mask"></div>
 
-<div id="buckaroo_magento2_payconiq_container">
+<div id="buckaroo_magento2_payconiq_container" data-bind="scope: 'payconiq-component'">
     <div id="buckaroo_magento2_payconiq_items">
         <div id="buckaroo_magento2_payconiq_qr"></div>
 
         <button id="buckaroo_magento2_payconiq_cancel" type="button" title="Cancel" data-bind="click: cancelPayment">
-            <span><?= /* @noEscape */ __('Cancel') ?></span>
+            <span><?= /* @noEscape */ __('Cancel')?></span>
         </button>
     </div>
 </div>
 
 <?php
-    $transactionKey = $block->getTransactionKey();
-?>
-<script type="text/x-magento-init">
-    {
-        "*": {
-            "Magento_Ui/js/core/app": {
-                "components": {
-                    "buckaroo_payconiq": {
-                        "component": "Buckaroo_Magento2/js/view/payment/method-renderer/payconiq",
-                        "transactionKey": "<?= /* @noEscape */ $transactionKey; ?>"
-                }
-            }
-        }
+    $key = $block->getTransactionKey();
+    $script = <<<JS
+    require(['buckaroo/payconiq/pay'], function (payconiqPay) {
+        var transactionKey = "$key";
+
+        payconiqPay.setTransactionKey(transactionKey);
+        payconiqPay.showQrCode();
+    });
+    cancelPayment = function() {
+        require(['buckaroo/payconiq/pay'], function (payconiqPay) {
+            payconiqPay.cancelPayment();
+        });
     }
-}
-</script>
+JS;
+?>
+<?= /* @noEscape */ $secureRenderer->renderTag('script', [], $script, false); ?>
