--- a/view/frontend/templates/checkout/payconiq/pay.phtml
+++ b/view/frontend/templates/checkout/payconiq/pay.phtml
@@ -1,6 +1,6 @@
 <div id="buckaroo_magento2_payconiq_loader" class="loading-mask"></div>
 
-<div id="buckaroo_magento2_payconiq_container" data-bind="scope: 'payconiq-component'">
+<div id="buckaroo_magento2_payconiq_container">
     <div id="buckaroo_magento2_payconiq_items">
         <div id="buckaroo_magento2_payconiq_qr"></div>
 
