--- a/view/frontend/templates/catalog/product/view/paypal-express.phtml
+++ b/view/frontend/templates/catalog/product/view/paypal-express.phtml
@@ -18,7 +18,11 @@
  * @license   https://tldrlegal.com/license/mit-license
  */
 ?>
-<?php if ($block->canShowProductButton()): ?>
+<?php
+//var_dump("ALBINA");
+//var_dump(json_encode($block));
+//die();
+if ($block->canShowProductButton()): ?>
 <div id="paypal-express-button-component" data-bind="scope:'paypalExpress'">
     <!-- ko template: getTemplate() --><!-- /ko -->
     <div class="buckaroo-paypal-express"></div>
