--- a/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
@@ -6,11 +6,11 @@
                        name="payment[method]"
                        class="radio"
                        data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-                <label class="label" data-bind="attr: {'for': getCode()}" >
-                        <!-- ko text: getTitle() --><!-- /ko -->
-                        <!-- ko if: subtext !== null && subtext.length > 0 -->
-                       <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
-                        <!-- /ko -->
+                <label class="label" data-bind="attr: {'for': getCode()}">
+                    <!-- ko text: getTitle() --><!-- /ko -->
+                    <!-- ko if: subtext !== null && subtext.length > 0 -->
+                    <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
+                    <!-- /ko -->
                 </label>
             </div>
             <div class="bk-img-wrap">
@@ -26,131 +26,67 @@
             <!--/ko-->
         </div>
 
-        <div class="payment-method-second-col billing-address-form">
-            <form data-bind="mageInit: { 'validation': [] },
-                  attr: {'data-hasrequired': $t('* Required Fields')}">
-                <fieldset class="fieldset bk-creditcards">
-                    <input id="buckaroo_magento2_creditcards_issuer"
-                    type="hidden"
-                    name="payment[buckaroo_magento2_creditcards][issuer]"
-                    data-bind="value: cardIssuer">
-                    <div class="fieldset">
-                        <div class="field required">
-                            <label class="label" for="buckaroo_magento2_creditcards_cardholdername"> <span data-bind="i18n: 'Name on card:'"> </span> </label>
-                            <div class="control">
-                                <input id="buckaroo_magento2_creditcards_cardholdername"
-                                       type="text"
-                                       class="input-text field"
-                                       name="payment[buckaroo_magento2_creditcards][cardholdername]"
-                                       data-bind="
-                            valueUpdate: 'blur',
-                            value: cardHolderName,
-                            attr: {
-                                'data-validate': JSON.stringify({ 'required': true, 'validateCardHolderName': true }),
-                                'placeholder': 'John Doe'
-                             },
-                            event: { blur: validateField }">
-                            </div>
-                        </div>
 
-                        <div class="field required bk-card-number">
-                            <label class="label" for="buckaroo_magento2_creditcards_cardnumber">
-                                <span data-bind="i18n: 'Card number:'"> </span>
-                            </label>
-                                <div class="bk-card-number-input-wrap">
-                                    <div class="control">
-                                        <input id="buckaroo_magento2_creditcards_cardnumber"
-                                               type="text"
-                                               class="input-text field"
-                                               name="payment[buckaroo_magento2_creditcards][cardnumber]"
-                                               data-bind="
-                                    valueUpdate: 'input',
-                                    value: formatedCardNumber,
-                                    attr: {
-                                        'data-validate': JSON.stringify({ 'required': true, 'validateCardNumber': true }),
-                                        'maxlength': 23,
-                                        'placeholder': '0000 0000 0000 0000'
-                                    },
-                                    event: { blur: validateCardNumber }">
-                                    </div>
-                                    <div class="bk-card-image">
-                                        <img class="issuer-img" data-bind="attr: {
-                                                 'src': issuerImage,
-                                                 'width': 30,
-                                                 'height': 32 }"
-                                        />
-                                    </div>
-                                </div>
+        <div class="payment-method-second-col billing-address-form">
+            <form class="bg-white px-8 pt-6 pb-8">
+                    <div class="mb-4">
+                        <label id="cc-name-label" class="block text-gray-700 text-sm font-bold mb-2">
+                            Cardholder Name
+                        </label>
+                        <div id="cc-name-wrapper"
+                             class="shadow h-12 appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
                         </div>
-                        <div class="bk-cvc-date-wrap">
-                            <div class="field required bk-date">
-                                <label class="label" for="buckaroo_magento2_creditcards_expireDate">
-                                    <span data-bind="i18n: 'Expiration:'"></span>
+                        <p id="cc-name-error" class="text-red-500 text-xs italic mt-1"></p>
+                    </div>
+
+                    <div class="mb-4">
+                        <label id="cc-number-label" class="block text-gray-700 text-sm font-bold mb-2">
+                            Card Number
+                        </label>
+                        <div id="cc-number-wrapper"
+                             class="shadow h-12 appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                        </div>
+                        <p id="cc-number-error" class="text-red-500 text-xs italic mt-1"></p>
+                    </div>
+
+                    <div class="mb-6">
+                        <div class="grid grid-cols-2 gap-4">
+                            <div class="col-span-1">
+                                <label id="cc-expiry-label" class="block text-gray-700 text-sm font-bold mb-2">
+                                    Expiry Date
                                 </label>
-                                <div class="control">
-                                    <input id="buckaroo_magento2_creditcards_expireDate"
-                                           type="text"
-                                           class="input-text field"
-                                           name="payment[buckaroo_magento2_creditcards][expireDate]"
-                                           data-bind="
-                                valueUpdate: 'input',
-                                value: formatedExpirationDate,
-                                attr: { 
-                                    'data-validate': JSON.stringify(
-                                        { 'required': true,  'bkValidateMonth': true, 'bkValidateYear': true }
-                                    ),
-                                    'maxlength': 5,
-                                    'placeholder': 'MM/YY'
-                                },
-                                event: { blur: validateField }">
+                                <div id="cc-expiry-wrapper"
+                                     class="shadow h-12 appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
                                 </div>
+                                <p id="cc-expiry-error"  class="text-red-500 text-xs italic mt-1"></p>
                             </div>
-                            <div class="field required bk-cvc">
-                                <label class="label" for="buckaroo_magento2_creditcards_cvc">
-                                    <span data-bind="i18n: 'CVC / CVV:'"></span>
+                            <div class="col-span-1">
+                                <label id="cc-cvc-label" class="block text-gray-700 text-sm font-bold mb-2">
+                                    CVC
                                 </label>
-                                <div class="control">
-                                    <input id="buckaroo_magento2_creditcards_cvc"
-                                           type="text"
-                                           class="input-text field"
-                                           name="payment[buckaroo_magento2_creditcards][cvc]"
-                                           data-bind="
-                                    valueUpdate: 'blur',
-                                    value: cvc,
-                                    attr: {
-                                        'data-validate': JSON.stringify({ 'required': true, 'validateCvc': true }),
-                                        'maxlength': 4,
-                                        'placeholder': '123'
-                                    },
-                                    event: { blur: validateField }">
+                                <div id="cc-cvc-wrapper"
+                                     class="shadow h-12 appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
                                 </div>
-                               
+                                <p id="cc-cvc-error" class="text-red-500 text-xs italic mt-1"></p>
                             </div>
                         </div>
-                        </div>
+                    </div>
 
                     <div class="field">
-                        <span data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' ">  </span>
+                        <span data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.'"></span>
                     </div>
-                </fieldset>
-            </form>
-        </div>
 
-        <div class="actions-toolbar">
-            <div class="primary">
-                <button id="button-action-checkout-creditcards"
-                        class="action primary checkout button-creditcards"
-                        type="submit"
-                        data-bind="
-                        click: placeOrder,
-                        attr: {title: $t('Place Order')},
-                        enable: (getCode() == isChecked()),
-                        css: {disabled: !isPlaceOrderActionAllowed() }
-                        "
-                        disabled>
-                    <span data-bind="i18n: 'Place Order'"></span>
-                </button>
-            </div>
+                    <div class="flex items-center justify-between">
+                        <button id="pay"
+                                class="bg-[#ff5555] hover:bg-blue-700 text-white py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                                type="button">
+                            Submit
+                        </button>
+                        <a class="inline-block align-baseline text-sm text-gray-500 hover:text-gray-800" href="#">
+                            Cancel
+                        </a>
+                    </div>
+            </form>
         </div>
 
         <!-- ko if: payWithBaseCurrency() -->
@@ -168,6 +104,5 @@
             <!-- ko template: getTemplate() --><!-- /ko -->
             <!--/ko-->
         </div>
-
     </div>
 </div>
