--- a/view/frontend/templates/catalog/product/view/ideal-fast-checkout.phtml
+++ b/view/frontend/templates/catalog/product/view/ideal-fast-checkout.phtml
@@ -1,26 +1,4 @@
 <?php
-/**
- * NOTICE OF LICENSE
- *
- * This source file is subject to the MIT License
- * It is available through the world-wide-web at this URL:
- * https://tldrlegal.com/license/mit-license
- * If you are unable to obtain it through the world-wide-web, please send an email
- * to support@buckaroo.nl so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade this module to newer
- * versions in the future. If you wish to customize this module for your
- * needs please contact support@buckaroo.nl for more information.
- *
- * @copyright Copyright (c) Buckaroo B.V.
- * @license   https://tldrlegal.com/license/mit-license
- */
-?>
-<?php
-//var_dump($block->getProduct());
-//die();
 if ($block->canShowProductButton()): ?>
     <button id="ideal-fast-checkout-button">Fast Checkout with iDEAL</button>
 
@@ -29,22 +7,24 @@ if ($block->canShowProductButton()): ?>
 
     <script>
         function initializeIdealFastCheckout() {
-            if ('undefined' === typeof window.checkoutConfig) {
+            if (typeof window.checkoutConfig === 'undefined') {
                 window.checkoutConfig = <?= /* @noEscape */ ($block->getIdealConfig()); ?>;
                 window.isCustomerLoggedIn = window.checkoutConfig.isCustomerLoggedIn;
-                if ('undefined' === typeof window.checkoutConfig.totalsData) {
+                if (typeof window.checkoutConfig.totalsData === 'undefined') {
                     window.checkoutConfig.totalsData = {};
                 }
-                // console.log("HEREEee");
             }
 
             require(['Magento_Ui/js/core/app'], function (app) {
+                console.log('Magento_Ui/js/core/app loaded');
+                console.log('Initializing idealFastCheckout component');
+
                 app({
                     components: {
                         idealFastCheckout: {
                             component: "buckaroo/ideal-fast-checkout/payjs",
                             template: "Buckaroo_Magento2/catalog/product/view/ideal-fast-checkout",
-                            data:  <?= /* @noEscape */ json_encode($block->getConfig()); ?>
+                            data: <?= /* @noEscape */ json_encode($block->getConfig()); ?>
                         }
                     }
                 });
@@ -54,7 +34,12 @@ if ($block->canShowProductButton()): ?>
         }
 
         document.getElementById('ideal-fast-checkout-button').addEventListener('click', function() {
+            console.log('Button clicked');
             initializeIdealFastCheckout();
+            require(['buckaroo/ideal-fast-checkout/payjs'], function (Component) {
+                var component = new Component();
+                component.startProcess();
+            });
         });
     </script>
 <?php endif; ?>
