--- a/view/frontend/templates/checkout/cart/ideal-fast-checkout.phtml
+++ b/view/frontend/templates/checkout/cart/ideal-fast-checkout.phtml
@@ -1,56 +1,20 @@
 <?php
-/**
- * NOTICE OF LICENSE
- *
- * This source file is subject to the MIT License
- * It is available through the world-wide-web at this URL:
- * https://tldrlegal.com/license/mit-license
- * If you are unable to obtain it through the world-wide-web, please send an email
- * to support@buckaroo.nl so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade this module to newer
- * versions in the future. If you wish to customize this module for your
- * needs please contact support@buckaroo.nl for more information.
- *
- * @copyright Copyright (c) Buckaroo B.V.
- * @license   https://tldrlegal.com/license/mit-license
- */
-
 if ($block->canShowProductButton()): ?>
-    <button id="ideal-fast-checkout-button">Fast Checkout with iDEAL</button>
-
-    <div id="ideal-fast-checkout-catalog-product-view-component" data-bind="scope:'idealFastCheckout'" style="display:none;">
-    </div>
+    <button id="fast-checkout-ideal-btn">Fast Checkout with iDEAL</button>
 
     <script>
-        function initializeIdealFastCheckout() {
-            if ('undefined' === typeof window.checkoutConfig) {
-                window.checkoutConfig = <?= /* @noEscape */ ($block->getIdealConfig()); ?>;
-                window.isCustomerLoggedIn = window.checkoutConfig.isCustomerLoggedIn;
-                if ('undefined' === typeof window.checkoutConfig.totalsData) {
-                    window.checkoutConfig.totalsData = {};
-                }
-            }
-
-            require(['Magento_Ui/js/core/app'], function (app) {
-                app({
-                    components: {
-                        idealFastCheckout: {
-                            component: "buckaroo/ideal-fast-checkout/payjs",
-                            template: "Buckaroo_Magento2/checkout/cart/ideal-fast-checkout",
-                            data:  <?= /* @noEscape */ json_encode($block->getConfig()); ?>
-                        }
+        require(['jquery', 'buckaroo/ideal-fast-checkout/payjs'], function ($, fastCheckout) {
+            $('#fast-checkout-ideal-btn').click(function () {
+                var productData = {
+                    product_id: $('#product_id').val(),
+                    qty: $('#qty').val(),
+                    paymentData: {
+                        method: 'buckaroo_magento2_ideal'
                     }
-                });
+                };
+
+                fastCheckout.createQuoteAndPlaceOrder(productData);
             });
-
-            document.getElementById('ideal-fast-checkout-catalog-product-view-component').style.display = 'block';
-        }
-
-        document.getElementById('ideal-fast-checkout-button').addEventListener('click', function() {
-            initializeIdealFastCheckout();
         });
     </script>
 <?php endif; ?>
