enable or disable ideal button, cart function

--- a/view/frontend/templates/checkout/cart/ideal-fast-checkout.phtml
+++ b/view/frontend/templates/checkout/cart/ideal-fast-checkout.phtml
@@ -1,5 +1,5 @@
 <?php
-if ($block->canShowProductButton()): ?>
+if ($block->canShowCartButton()): ?>
     <button id="fast-checkout-ideal-btn">
         <img src=" <?php echo $block->escapeHtml($block->getLogo()) ?>" alt="Ideal Snel bestellen"/>
     </button>
