--- a/view/frontend/templates/catalog/product/view/ideal-fast-checkout.phtml
+++ b/view/frontend/templates/catalog/product/view/ideal-fast-checkout.phtml
@@ -11,7 +11,10 @@ if ($block->canShowProductButton()): ?>
                     qty: $('#qty').val(),
                     page: 'product',
                     paymentData: {
-                        method: 'buckaroo_magento2_ideal'
+                        method: 'buckaroo_magento2_ideal',
+                        additional_data: {
+                            issuer : 'fastcheckout'
+                        }
                     }
                 };
 
