--- a/view/adminhtml/templates/supportTab.phtml
+++ b/view/adminhtml/templates/supportTab.phtml
@@ -22,13 +22,13 @@
                         <span class="text">
                             <?= $block->escapeHtml(__('Magento Commerce'));?>:
                         </span>
-                        <span class="version"> 2.4.4, 2.4.5, 2.4.6, 2.4.7 </span>
+                        <span class="version"> 2.4.5, 2.4.6, 2.4.7 </span>
                     </li>
                     <li>
                         <span class="text">
                             <?= $block->escapeHtml(__('Magento Open Source'));?>:
                         </span>
-                        <span class="version"> 2.4.4, 2.4.5, 2.4.6, 2.4.7 </span>
+                        <span class="version"> 2.4.5, 2.4.6, 2.4.7 </span>
                     </li>
 
                     <li>
