--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
@@ -134,7 +134,7 @@
                                 <a target="_blank"
                                  rel="noopener"
                                    data-bind="
-                                       i18n: 'Yes, I accept the terms and condition for the use of Riverty | Afterpay.',
+                                       i18n: 'Yes, I accept the terms and condition for the use of Riverty.',
                                        attr: { 'href': termsUrl }
                                    ">
                                 </a>
