update error handling

--- a/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
@@ -77,6 +77,7 @@
                     </div>
 
                     <div class="field oauth-token-error text-red-500" data-bind="text: oauthTokenError, visible: oauthTokenError"></div>
+                    <div class="field payment-error text-red-500" data-bind="text: paymentError, visible: paymentError"></div>
 
                     <div class="flex items-center justify-between">
                         <button id="pay"
